# llm-compressor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: getting_started.md  pruning.md  quantization.md
examples/: bloom.py  compress_opt.py  dummy_llama.py  follow.md  gemma.py  gemma2.py  gemma3.py  llama.py  opt.py  phi.py  quant_opt.py  qwen2.py  qwen3.py  tinychat.py
llm_compressor/: main.py
llm_compressor/evaluation/: eval.py  t2i_eval.py
llm_compressor/models/: base.py  bloom.py  gemma.py  gemma2.py  gemma3.py  llama.py  opt.py  phi.py  qwen2.py  qwen3.py
llm_compressor/modules/: qlinear.py  qmatmul.py
llm_compressor/prune/: utils.py
scripts/: download_slm.sh  eval_bloom.sh  eval_gptaq.sh  eval_llama.sh  eval_opt.sh  eval_phi.sh  eval_prune_bloom.sh  eval_prune_gemma.sh  eval_prune_gemma2.sh  eval_prune_gemma3.sh  eval_prune_llama.sh  eval_prune_opt.sh  eval_prune_phi.sh  eval_prune_qwen2.sh  eval_prune_qwen3 copy.sh  eval_prune_qwen3.sh  eval_prune_total.sh  eval_quant.sh  eval_quant_bloom.sh  eval_quant_gemma.sh  eval_quant_gemma2.sh  eval_quant_gemma3.sh  eval_quant_llama.sh  eval_quant_opt.sh  eval_quant_phi.sh  eval_quant_qwen2.sh  eval_quant_qwen3.sh  eval_quant_total.sh  eval_qwen2.sh  eval_qwen3.sh  eval_ria.sh  eval_smquant.sh  eval_sparsegpt.sh  eval_total.sh  eval_wanda.sh  val_spin.sh
tests/: aime.py  aime24.py  arc.py  boolq.py  decon_diffusers.py  gen-sanity.py  gpqa.py  hadamard.py  hellaswag.py  mmlu-chat.py  mmlu-cot.py  mmlu.py  openbookqa.py  piqa.py  pixart.py  spinquant.py  winogrande.py
(+48 files in other folders)
